--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "react-tsparticles": "^2.12.2",
+    "recharts": "^3.1.2",
     "tsparticles": "^3.9.1",
     "tsparticles-slim": "^2.12.0"
   },
